--- a/package.json
+++ b/package.json
@@ -10,20 +10,39 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@web3forms/react": "^1.1.3",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-hook-form": "^7.54.1",
+    "react-icons": "^5.4.0",
+    "react-json-view-lite": "^2.0.1",
+    "react-vertical-timeline-component": "^3.6.0",
+    "typed.js": "^2.1.0",
+    "vanilla-tilt": "^1.8.1",
+    "vite-plugin-eslint": "^1.8.1"
   },
   "devDependencies": {
-    "@eslint/js": "^9.15.0",
+    "@eslint/js": "^9.16.0",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
+    "@types/react-vertical-timeline-component": "^3.3.6",
     "@vitejs/plugin-react": "^4.3.4",
-    "eslint": "^9.15.0",
+    "autoprefixer": "^10.4.20",
+    "daisyui": "^4.12.14",
+    "eslint": "^9.16.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-prettier": "^5.2.1",
+    "eslint-plugin-react": "^7.37.2",
     "eslint-plugin-react-hooks": "^5.0.0",
     "eslint-plugin-react-refresh": "^0.4.14",
-    "globals": "^15.12.0",
+    "globals": "^15.13.0",
+    "postcss": "^8.4.49",
+    "prettier": "3.4.1",
+    "prettier-plugin-tailwindcss": "^0.6.9",
+    "sass-embedded": "^1.81.0",
+    "tailwindcss": "^3.4.15",
     "typescript": "~5.6.2",
-    "typescript-eslint": "^8.15.0",
+    "typescript-eslint": "^8.16.0",
     "vite": "^6.0.1"
   }
 }
